--- a/sai.html
+++ b/sai.html
@@ -1,8 +1,8 @@
 <html>
 
-<body>
+<body style="bgcolor:green">
 
-<h1>welcome to home</h1>
+<h1 style="color:blue">welcome to home</h1>
 </body>
 
 </html>
